force-app/main/default/objects/IbdUnitSetAttempt__e.object
<CustomObject>
    <description>Inbound student unit set attempts - major/minor/specialisations</description>
    <fields>
        <fullName>Category__c</fullName>
        <description>This field captures the category</description>
        <label>Category</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <description>This field captures the course code of the course attempt</description>
        <label>Course_Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>This filed is to capture the type of event example INSERT, UPDATE and DELETE</description>
        <label>Event_Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_ID__c</fullName>
        <description>Person Id</description>
        <label>Person ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification_List__c</fullName>
        <description>A comma delimited list of Contact Qual unique keys</description>
        <label>Qualification List</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <description>This field captures the rank</description>
        <label>Rank</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requirements_Complete_Date__c</fullName>
        <label>Requirements Complete  Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Selection_Date__c</fullName>
        <label>Selection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <description>This field captures the sequence number of unit set attempt</description>
        <label>Sequence Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>This field captures title</description>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Set_Code__c</fullName>
        <description>This field captures the category</description>
        <label>Unit Set Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <description>This field captures version</description>
        <label>Course Version</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Inbound Unit Set Attempt</label>
    <pluralLabel>Inbound Unit Set Attempts</pluralLabel>
</CustomObject>